; ModuleID = '/home/carl/AnghaBench/tmux/extr_cmd-find.c_cmd_find_clear_state.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_cmd-find.c_cmd_find_clear_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_find_state = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cmd_find_clear_state(%struct.cmd_find_state* %0, i32 %1) #0 {
  %3 = alloca %struct.cmd_find_state*, align 8
  %4 = alloca i32, align 4
  store %struct.cmd_find_state* %0, %struct.cmd_find_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.cmd_find_state*, %struct.cmd_find_state** %3, align 8
  %6 = call i32 @memset(%struct.cmd_find_state* %5, i32 0, i32 8)
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.cmd_find_state*, %struct.cmd_find_state** %3, align 8
  %9 = getelementptr inbounds %struct.cmd_find_state, %struct.cmd_find_state* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.cmd_find_state*, %struct.cmd_find_state** %3, align 8
  %11 = getelementptr inbounds %struct.cmd_find_state, %struct.cmd_find_state* %10, i32 0, i32 1
  store i32 -1, i32* %11, align 4
  ret void
}

declare dso_local i32 @memset(%struct.cmd_find_state*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
